# cmake-project-template

./: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt
src/app1/: main.cpp
src/app2/: main.cpp
src/lib1/: CMakeLists.txt  lib1.cpp
src/lib1/include/lib1/: public.h
src/lib2/: CMakeLists.txt  lib2.cpp  private.h
src/lib2/include/lib2/: public.h
tests/: CMakeLists.txt  tests.cpp
